MP-234 [MOD] AuthenticationResponse and AuthenticationService to add role-attribute to Responsebody. updated also swagger and check in AuthIT.
