# backend/src/main/java/com/subadvisor/api/auth/AuthenticationService.java
@@ -43,7 +43,8 @@ public class AuthenticationService {
                 .map(
                         account -> new AuthenticationResponse(
                                 jwtTokenUtil.generateToken(authReq.getUsername()),
-                                ((IUserId) account).userId().toString()
+                                ((IUserId) account).userId().toString(),
+                                ((IUserId) account).ROLE()
                         )
                 );
     }
