# backend/src/main/java/com/subadvisor/api/auth/dto/AuthenticationResponse.java
@@ -12,4 +12,7 @@ public class AuthenticationResponse {
     @Getter
     private final String userId;
 
+    @Getter
+    private final String ROLE;
+
 }
